--- a/datasets.ipynb
+++ b/datasets.ipynb
@@ -273,7 +273,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## Hydroflask\n",
+    "https://sgbonline.com/hydro-flask-closes-out-another-robust-year/\n",
+    "https://sgbonline.com/hydro-flask-closes-out-another-robust-year/\n",
+    "https://www.inc.com/alix-stuart/2015-inc5000-how-this-company-overcame-a-toxic-disaster.html"
+   ]
   }
  ],
  "metadata": {
