--- a/Twitter.ipynb
+++ b/Twitter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,10 +11,10 @@
     "import pandas as pd\n",
     "import datetime\n",
     "####input your credentials here\n",
-    "consumer_key = 'EJ2bzIVQw7jSjJ5o0Cix6CzcS'\n",
-    "consumer_secret = 'd8aJEkFQLLyteH4mOjuxgtM3cKZNxPdCGivtWOUyaAvpmbPjQQ'\n",
-    "access_token = '1234205131807133696-GQVmr3bBV6bsUMDRPnnP1rpMNwBpXF'\n",
-    "access_token_secret = 'ynLMCC0V0y9AWJMo7md7YrWmIN63cSsYtomJJcgqrtDuA'\n",
+    "consumer_key = 'HmNJgn5XXB7MgKKUTkQb3PQQt'\n",
+    "consumer_secret = 'yNKqnb1NWKpCFTZGffO9njRUJAVvv8yLhCsisAVqd4TJnDxAXd'\n",
+    "access_token = '1234586541206294528-AAjnH7bUxNGyXxEtzZ4PljfuClgXeg'\n",
+    "access_token_secret = 'tFSl1M5BEMdCJJnGo1Ci0wwF7bHQMzaMGsZGMAyU9QEFK'\n",
     "\n",
     "auth = tweepy.OAuthHandler(consumer_key, consumer_secret)\n",
     "auth.set_access_token(access_token, access_token_secret)\n",
@@ -23,17 +23,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "start_date = datetime.datetime(2015, 1, 1, 00, 00, 00)\n",
-    "end_date = datetime.datetime(2020, 1, 1, 00, 00, 00)\n",
+    "start_date =  datetime.datetime(2015, 1, 1)\n",
+    "end_date =  datetime.datetime(2020, 1, 1)\n",
     "\n",
     "csvWriter = csv.writer(csvFile)\n",
-    "writer = csv.writer(open('week4.csv', 'w'))\n",
+    "writer = csv.writer(open('twitter_stats.csv', 'w'))\n",
     "\n",
-    "for tweet in tweepy.Cursor(api.search,q=\"#\",count=100,\n",
+    "for tweet in tweepy.Cursor(api.search,q=\"#reusable\",count=100,\n",
     "                           lang=\"en\",\n",
     "                           since=start_date,\n",
     "                           until=end_date).items():\n",
